--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe2
+# very good
 
-I'm creating noice web experiences for the next generation of consumer-facing companies 
+now i can see my version. 
