--- a/src/@lekoarts/gatsby-theme-cara/sections/projects2.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects2.mdx
@@ -1,269 +1,9 @@
 ## Projects
 
 <ProjectCard2
-  title="PHP SHOPS"
+  title="testing: XXX "
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
     
-<div style="text-align: center; width: 100%"> 
-    
-  <a href="https://websitedemos.net/brandstore-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/10/brandstore-02-home-1-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-
-<a href="https://websitedemos.net/organic-shop-02/" target="_blank">
-  <img
-    src="https://websitedemos.net/wp-content/uploads/2019/07/organic-products-store-600x800.jpg"
-    style="max-height: 8.5rem; margin:.5rem"
-  />
-</a>
-<a href="http://websitedemos.net/cosmetics-store-02/" target="_blank">
-  <img
-    src="https://websitedemos.net/wp-content/uploads/2020/04/cosmetics-store-01-homepage-600x800.jpg"
-    style="max-height: 8.5rem; margin:.5rem"
-  />
-</a>
-<a href="http://websitedemos.net/plant-store-02/" target="_blank">
-  <img
-    src="https://websitedemos.net/wp-content/uploads/2019/10/plant-store-02-home-600x800.jpg"
-    style="max-height: 8.5rem; margin:.5rem"
-  />
-</a>
-<a href="http://websitedemos.net/custom-printing-02/" target="_blank">
-  <img
-    src="https://websitedemos.net/wp-content/uploads/2019/10/custom-printing-02-home-600x800.jpg"
-    style="max-height: 8.5rem; margin:.5rem"
-  />
-</a>
-
-<a href="http://websitedemos.net/artist-02/" target="_blank">
-  <img
-    src="https://websitedemos.net/wp-content/uploads/2019/10/artist-christine-home-page-600x800.jpg"
-    style="max-height: 8.5rem; margin:.5rem"
-  />
-</a>
-
-<a href="http://websitedemos.net/brandstore-01/" target="_blank">
-  <img
-    src="https://websitedemos.net/wp-content/uploads/2019/07/brandstore-01-home-600x800.jpg"
-    style="max-height: 8.5rem; margin:.5rem"
-  />
-</a>
-
-  </div>
-</ProjectCard2>
-
-<ProjectCard2
-  title="react shops"
-  bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
->
-<div style="text-align: center; width: 100%;">
-    
-    <a href="https://amazona-shop-ml-1.herokuapp.com/" target="_blank">
-    <img
-        src="https://cdn.vox-cdn.com/thumbor/ZT1WNYhDfVvUFfRWyXzeSF3rci0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15794320/amazon-storefront.0.1462603582.jpeg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="https://self-order-kiosk.herokuapp.com/" target="_blank">
-    <img
-        src="https://neenahsoccerclub.demosphere-secure.com/_files/flatgrass/mcdonalds-ad/mobile%20order%20and%20pay.png"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-</div>
-</ProjectCard2>
-
-<ProjectCard2
-  title="php/wp business"
-  bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
->
-<div style="text-align: center; width: 100%;">
-    
-    <a href="http://websitedemos.net/outdoor-adventure-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/outdoor-adventure-home-screenshot-600x800.png"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/yoga-instructor-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/yoga-instructor-02-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/fitness-trainer-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2020/01/fitness-trainer-02-home-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/freelance-copywriter-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2020/09/freelance-copywriter-02-homepage-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/life-coach-sara-john/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/life-coach-sara-john-home-2-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="https://websitedemos.net/horticulture-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2020/08/horticulture-02-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/windows-and-doors-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/windows-and-doors-02-home-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/garden-maintenance-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/garden-maintenance-02-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/plumber-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/plumber-02-homepage-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/gardener-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/gardener-02-home-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/cleaner-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2020/02/cleaner-02-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/electrician-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/electrician-02-feb-20-home-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="" target="_blank">
-    <img
-        src=""
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-
-    
-</div>
-</ProjectCard2>
-
-
-<ProjectCard2
-  title="more php/wp"
-  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
->
-      
-<div style="text-align: center; width: 100%;">
-    
-  <a href="http://websitedemos.net/online-health-coach-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2020/10/online-health-coach-02-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="https://websitedemos.net/chartered-accountant-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/chartered-accountant-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/windows-and-doors-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/windows-and-doors-02-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/musician-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2020/08/musician-02-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/nutritionist-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2020/01/nutritionist-02-home-page-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/content-marketing-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/growthmarketer-home-screenshot-600x800.png"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/coach-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2018/02/coach-feb-20-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/motivational-speaker-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/motivational-speaker-feb-20-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/car-repair-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/car-repair-02-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/agency-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2017/09/agency-02-1-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/hotel-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2017/08/hotel-02-1-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/outdoor-adventure-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/outdoor-adventure-home-screenshot-600x800.png"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-{/*     
-  <a href="" target="_blank">
-    <img
-      src=""
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a> */}
-
-</div>
+let me see this version 
 </ProjectCard2>
