--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe 2
+# Yaass.....
 
-XXX I'm creating noice web experiences for the next generation of consumer-facing companies
+XXX    I'm creating noice web experiences for the next generation of consumer-facing companies
