--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,4 @@
 # Yaass.....
 
-XXX    I'm creating noice web experiences for the next generation of consumer-facing companies
+A collection of not-costume-maid e-Shop and Business websites you could have... immediately! 
+SO HERE WE GO:
