--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,4 +1,5 @@
 # Info:
+<div syle='height:100vh'>
 please notice the pros & cons of the website environment. 
 
 PHP WordPress: 
@@ -7,3 +8,4 @@ but: the website is significantly slower.
 
 JavaScript React or Gatsby: 
 are completely the opposite for the described above.
+</div>
