--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,4 +1,4 @@
-## Projects
+## Shop Projects
 
 <ProjectCard
   title="PHP SHOPS"
@@ -74,196 +74,5 @@
         style="max-height: 8.5rem; margin:.5rem"
     /> 
     </a>
-</div>
-</ProjectCard>
-
-<ProjectCard
-  title="php/wp business"
-  bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
->
-<div style="text-align: center; width: 100%;">
-    
-    <a href="http://websitedemos.net/outdoor-adventure-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/outdoor-adventure-home-screenshot-600x800.png"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/yoga-instructor-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/yoga-instructor-02-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/fitness-trainer-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2020/01/fitness-trainer-02-home-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/freelance-copywriter-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2020/09/freelance-copywriter-02-homepage-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/life-coach-sara-john/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/life-coach-sara-john-home-2-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="https://websitedemos.net/horticulture-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2020/08/horticulture-02-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/windows-and-doors-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/windows-and-doors-02-home-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/garden-maintenance-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/garden-maintenance-02-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/plumber-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/plumber-02-homepage-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/gardener-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/gardener-02-home-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/cleaner-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2020/02/cleaner-02-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="http://websitedemos.net/electrician-02/" target="_blank">
-    <img
-        src="https://websitedemos.net/wp-content/uploads/2019/07/electrician-02-feb-20-home-600x800.jpg"
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-    <a href="" target="_blank">
-    <img
-        src=""
-        style="max-height: 8.5rem; margin:.5rem"
-    /> 
-    </a>
-
-    
-</div>
-</ProjectCard>
-
-
-<ProjectCard
-  title="more php/wp"
-  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
->
-      
-<div style="text-align: center; width: 100%;">
-    
-  <a href="http://websitedemos.net/online-health-coach-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2020/10/online-health-coach-02-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="https://websitedemos.net/chartered-accountant-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/chartered-accountant-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/windows-and-doors-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/windows-and-doors-02-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/musician-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2020/08/musician-02-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/nutritionist-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2020/01/nutritionist-02-home-page-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/content-marketing-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/growthmarketer-home-screenshot-600x800.png"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/coach-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2018/02/coach-feb-20-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/motivational-speaker-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/motivational-speaker-feb-20-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/car-repair-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/car-repair-02-home-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/agency-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2017/09/agency-02-1-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/hotel-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2017/08/hotel-02-1-600x800.jpg"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-    
-  <a href="http://websitedemos.net/outdoor-adventure-02/" target="_blank">
-    <img
-      src="https://websitedemos.net/wp-content/uploads/2019/07/outdoor-adventure-home-screenshot-600x800.png"
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a>
-{/*     
-  <a href="" target="_blank">
-    <img
-      src=""
-      style="max-height: 8.5rem; margin:.5rem"
-    />
-  </a> */}
-
 </div>
 </ProjectCard>
