--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -73,6 +73,12 @@
         src="https://neenahsoccerclub.demosphere-secure.com/_files/flatgrass/mcdonalds-ad/mobile%20order%20and%20pay.png"
         style="max-height: 8.5rem; margin:.5rem"
     /> 
-    </a>
+    </a> 
+    <a href="https://cool-shop.ga/" target="_blank">
+    <img
+        src="https://cool-shop.ga/logoCoolShop.png"
+        style="max-height: 8.1rem; margin:.5rem"
+    /> 
+    </a> 
 </div>
 </ProjectCard>
