--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -62,7 +62,7 @@
 >
 <div style="text-align: center; width: 100%;">
     
-    <a href="https://amazona-shop-ml-1.herokuapp.com/" target="_blank">
+    <a href="https://amazona-ehop.herokuapp.com/" target="_blank">
     <img
         src="https://cdn.vox-cdn.com/thumbor/ZT1WNYhDfVvUFfRWyXzeSF3rci0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15794320/amazon-storefront.0.1462603582.jpeg"
         style="max-height: 8.5rem; margin:.5rem"
