adding events-pr

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -64,7 +64,8 @@
     
     <a href="https://amazona-shop-ml-1.herokuapp.com/" target="_blank">
     <img
-        src="https://cdn.vox-cdn.com/thumbor/ZT1WNYhDfVvUFfRWyXzeSF3rci0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15794320/amazon-storefront.0.1462603582.jpeg"
+        src="https://amazona-shop-ml-1.herokuapp.com/uploads/assets/img/amazona-shop.png"
+        rel="Amazona-Shop"
         style="max-height: 8.5rem; margin:.5rem"
     /> 
     </a>
@@ -80,5 +81,23 @@
         style="max-height: 8.1rem; margin:.5rem"
     /> 
     </a> 
+     {/* src="https://cdn.vox-cdn.com/thumbor/ZT1WNYhDfVvUFfRWyXzeSF3rci0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15794320/amazon-storefront.0.1462603582.jpeg" */}
+       
+</div>
+</ProjectCard>
+
+<ProjectCard
+  title="Vue Projects"
+  bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
+>
+<div style="text-align: center; width: 100%;">
+    
+    <a href="https://events-pr.ml/" target="_blank">
+    <img
+        src="https://drive.google.com/file/d/1KBagvwImBeEFeLe2Q0oZb9ZBWQDN7caw/view?usp=sharing"
+        rel="events-pr"
+        style="max-height: 8.5rem; margin:.5rem"
+    /> 
+    </a>
 </div>
 </ProjectCard>
