--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -94,7 +94,7 @@
     
     <a href="https://events-pr.ml/" target="_blank">
     <img
-        src="https://drive.google.com/file/d/1KBagvwImBeEFeLe2Q0oZb9ZBWQDN7caw/view?usp=sharing"
+        src="https://www.alterfservices.com/wp-content/uploads/2018/09/PR-events.png"
         rel="events-pr"
         style="max-height: 8.5rem; margin:.5rem"
     /> 
