revert previous keeping last save with events-pr

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -64,8 +64,7 @@
     
     <a href="https://amazona-ehop.herokuapp.com/" target="_blank">
     <img
-        src="https://amazona-shop-ml-1.herokuapp.com/uploads/assets/img/amazona-shop.png"
-        rel="Amazona-Shop"
+        src="https://cdn.vox-cdn.com/thumbor/ZT1WNYhDfVvUFfRWyXzeSF3rci0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15794320/amazon-storefront.0.1462603582.jpeg"
         style="max-height: 8.5rem; margin:.5rem"
     /> 
     </a>
@@ -81,8 +80,6 @@
         style="max-height: 8.1rem; margin:.5rem"
     /> 
     </a> 
-     {/* src="https://cdn.vox-cdn.com/thumbor/ZT1WNYhDfVvUFfRWyXzeSF3rci0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15794320/amazon-storefront.0.1462603582.jpeg" */}
-       
 </div>
 </ProjectCard>
 
