--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -80,6 +80,14 @@
         style="max-height: 8.1rem; margin:.5rem"
     /> 
     </a> 
+    
+    <a href="https://shopping-cart-x.herokuapp.com/" target="_blank">
+    <img
+        src="https://shopping-cart-x.herokuapp.com/images/Screenshot%20x-400.png"
+        style="max-height: 8.1rem; margin:.5rem"
+    /> 
+    </a> 
+
 </div>
 </ProjectCard>
 
