adding shopping-cart-1-no-redux

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -81,7 +81,7 @@
     /> 
     </a> 
     
-    <a href="https://shopping-cart-x.herokuapp.com/" target="_blank">
+    <a href="https://shopping-cart-1-no-redux.herokuapp.com/" target="_blank">
     <img
         src="https://shopping-cart-x.herokuapp.com/images/Screenshot%20x-400.png"
         style="max-height: 8.1rem; margin:.5rem"
