--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -83,7 +83,7 @@
     
     <a href="https://shopping-cart-1-no-redux.herokuapp.com/" target="_blank">
     <img
-        src="https://shopping-cart-x.herokuapp.com/images/Screenshot%20x-400.png"
+        src="https://shopping-cart-1-no-redux.herokuapp.com/images/Screenshot%20x-400.png"
         style="max-height: 8.1rem; margin:.5rem"
     /> 
     </a> 
