--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -62,6 +62,8 @@
 >
 <div style="text-align: center; width: 100%;">
     
+
+
     <a href="https://amazona-ehop.herokuapp.com/" target="_blank">
     <img
         src="https://cdn.vox-cdn.com/thumbor/ZT1WNYhDfVvUFfRWyXzeSF3rci0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15794320/amazon-storefront.0.1462603582.jpeg"
@@ -88,6 +90,13 @@
     /> 
     </a> 
 
+    <a href="https://shopping-cart-x.herokuapp.com/" target="_blank">
+    <img
+        src="https://shopping-cart-x.herokuapp.com/images/shop_iN5.png"
+        style="max-height: 8.5rem; margin:.5rem"
+    /> 
+
+    
 </div>
 </ProjectCard>
 
